--- a/Flat-Land-Client/Base.lproj/Main.storyboard
+++ b/Flat-Land-Client/Base.lproj/Main.storyboard
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="11134" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="14295.6" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14295.6"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -673,11 +675,11 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Flat_Land_Client" customModuleProvider="target"/>
                 <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="0.0"/>
+            <point key="canvasLocation" x="33" y="-74"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
@@ -693,25 +695,141 @@
                         </connections>
                     </window>
                     <connections>
-                        <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
+                        <segue destination="VUu-m7-PZC" kind="relationship" relationship="window.shadowedContentViewController" id="c5k-nU-ALJ"/>
                     </connections>
                 </windowController>
                 <customObject id="Oky-zY-oP4" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--Init View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
+                <viewController id="XfG-lQ-9wD" customClass="InitViewController" customModule="Flat_Land_Client" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl" customClass="InitView" customModule="Flat_Land_Client" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <stackView distribution="fill" orientation="vertical" alignment="centerX" spacing="22" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f3D-uV-IAT">
+                                <rect key="frame" x="187" y="80" width="106" height="109"/>
+                                <subviews>
+                                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vvW-Cp-WUc">
+                                        <rect key="frame" x="5" y="87" width="96" height="22"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" placeholderString="localhost" drawsBackground="YES" id="3Zt-7i-iua">
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Zyv-Ov-M4H">
+                                        <rect key="frame" x="5" y="43" width="96" height="22"/>
+                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" placeholderString="8080" drawsBackground="YES" id="9XD-AY-Wzr">
+                                            <font key="font" metaFont="system"/>
+                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                    </textField>
+                                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="pL3-l9-zhb">
+                                        <rect key="frame" x="8" y="-7" width="90" height="32"/>
+                                        <buttonCell key="cell" type="push" title="connect" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="7kO-H1-QNq">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="connect:" target="m2S-Jp-Qdl" id="QJe-mG-qT3"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Zyv-Ov-M4H" firstAttribute="centerX" secondItem="pL3-l9-zhb" secondAttribute="centerX" id="Bo4-kd-iL1"/>
+                                    <constraint firstItem="pL3-l9-zhb" firstAttribute="leading" secondItem="f3D-uV-IAT" secondAttribute="leading" constant="14" id="q0i-uE-iwy"/>
+                                </constraints>
+                                <visibilityPriorities>
+                                    <integer value="1000"/>
+                                    <integer value="1000"/>
+                                    <integer value="1000"/>
+                                </visibilityPriorities>
+                                <customSpacing>
+                                    <real value="3.4028234663852886e+38"/>
+                                    <real value="3.4028234663852886e+38"/>
+                                    <real value="3.4028234663852886e+38"/>
+                                </customSpacing>
+                            </stackView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="f3D-uV-IAT" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="GB1-Ej-Z89"/>
+                            <constraint firstItem="f3D-uV-IAT" firstAttribute="centerY" secondItem="m2S-Jp-Qdl" secondAttribute="centerY" id="Vgf-Or-1rQ"/>
+                        </constraints>
+                        <connections>
+                            <outlet property="addressTextField" destination="vvW-Cp-WUc" id="xIb-UF-Enu"/>
+                            <outlet property="connectButton" destination="pL3-l9-zhb" id="xlE-4u-505"/>
+                            <outlet property="portTextField" destination="Zyv-Ov-M4H" id="7B4-Rc-eOF"/>
+                        </connections>
+                    </view>
+                    <connections>
+                        <outlet property="initView" destination="m2S-Jp-Qdl" id="PNi-ME-NqQ"/>
+                        <segue destination="jB2-Ap-xzY" kind="show" id="52T-oe-BKJ"/>
+                    </connections>
+                </viewController>
+                <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <objectController id="qGL-y2-Ryk"/>
+            </objects>
+            <point key="canvasLocation" x="75" y="655"/>
+        </scene>
+        <!--Master View Controller-->
+        <scene sceneID="pXq-XP-FTf">
+            <objects>
+                <viewController id="VUu-m7-PZC" customClass="MasterViewController" customModule="Flat_Land_Client" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" wantsLayer="YES" id="0Go-X2-UcC" customClass="InitView" customModule="Flat_Land_Client" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <containerView translatesAutoresizingMaskIntoConstraints="NO" id="6nZ-wf-Q1h">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                                <connections>
+                                    <segue destination="XfG-lQ-9wD" kind="embed" id="bzx-c7-kfa"/>
+                                </connections>
+                            </containerView>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xI3-HO-144">
+                                <rect key="frame" x="18" y="231" width="444" height="19"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" placeholderString="no status yet" id="9cy-Y8-V7B">
+                                    <font key="font" metaFont="system" size="15"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="xI3-HO-144" secondAttribute="trailing" constant="20" id="7F9-O1-Vc4"/>
+                            <constraint firstItem="xI3-HO-144" firstAttribute="leading" secondItem="0Go-X2-UcC" secondAttribute="leading" constant="20" id="8os-uk-sGM"/>
+                            <constraint firstItem="xI3-HO-144" firstAttribute="top" secondItem="0Go-X2-UcC" secondAttribute="top" constant="20" id="9AY-Wb-hRJ"/>
+                            <constraint firstAttribute="bottom" secondItem="6nZ-wf-Q1h" secondAttribute="bottom" id="O0n-nV-VeK"/>
+                            <constraint firstItem="6nZ-wf-Q1h" firstAttribute="leading" secondItem="0Go-X2-UcC" secondAttribute="leading" id="UyH-GH-d8I"/>
+                            <constraint firstItem="6nZ-wf-Q1h" firstAttribute="top" secondItem="0Go-X2-UcC" secondAttribute="top" id="beU-8I-c6Q"/>
+                            <constraint firstAttribute="trailing" secondItem="6nZ-wf-Q1h" secondAttribute="trailing" id="vgr-Ji-d55"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="initView" destination="0Go-X2-UcC" id="3gq-HP-THq"/>
+                    </connections>
+                </viewController>
+                <customObject id="Xu9-OP-ixM" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <userDefaultsController representsSharedInstance="YES" id="iOc-T0-n9y"/>
+            </objects>
+            <point key="canvasLocation" x="654" y="250"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="deo-LI-qIF">
+            <objects>
+                <viewController id="jB2-Ap-xzY" sceneMemberID="viewController">
+                    <view key="view" id="LGi-ZX-2ho">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
                 </viewController>
-                <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <customObject id="lf7-3U-MeS" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="677" y="655"/>
         </scene>
     </scenes>
 </document>
