--- a/Flat-Land-Client/Base.lproj/Main.storyboard
+++ b/Flat-Land-Client/Base.lproj/Main.storyboard
@@ -684,7 +684,7 @@
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
-                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
+                <windowController showSeguePresentationStyle="single" id="B8D-0N-5wS" customClass="windows" customModule="Flat_Land_Client" customModuleProvider="target" sceneMemberID="viewController">
                     <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
@@ -702,11 +702,29 @@
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--Init View Controller-->
+        <!--Window Controller-->
+        <scene sceneID="I4h-kL-ygs">
+            <objects>
+                <windowController id="Rv5-81-WJE" sceneMemberID="viewController">
+                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" id="NNe-14-i4R">
+                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
+                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
+                        <rect key="contentRect" x="163" y="199" width="480" height="270"/>
+                        <rect key="screenRect" x="0.0" y="0.0" width="1280" height="777"/>
+                        <connections>
+                            <outlet property="delegate" destination="Rv5-81-WJE" id="zK6-dI-zWb"/>
+                        </connections>
+                    </window>
+                </windowController>
+                <customObject id="N6i-al-F4W" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="110" y="680"/>
+        </scene>
+        <!--Connection View Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="InitViewController" customModule="Flat_Land_Client" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl" customClass="InitView" customModule="Flat_Land_Client" customModuleProvider="target">
+                <viewController storyboardIdentifier="ConnectionViewController" showSeguePresentationStyle="single" id="XfG-lQ-9wD" customClass="ConnectionViewController" customModule="Flat_Land_Client" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl" customClass="ConnectionView" customModule="Flat_Land_Client" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
@@ -761,7 +779,7 @@
                             <constraint firstItem="f3D-uV-IAT" firstAttribute="centerY" secondItem="m2S-Jp-Qdl" secondAttribute="centerY" id="Vgf-Or-1rQ"/>
                         </constraints>
                         <gestureRecognizers>
-                            <clickGestureRecognizer numberOfClicksRequired="1" id="uvA-eV-lAh">
+                            <clickGestureRecognizer delaysPrimaryMouseButtonEvents="YES" numberOfClicksRequired="1" id="uvA-eV-lAh">
                                 <connections>
                                     <action selector="clicked:" target="m2S-Jp-Qdl" id="7aP-nP-Y32"/>
                                 </connections>
@@ -775,28 +793,24 @@
                     </view>
                     <connections>
                         <outlet property="clickGesture" destination="uvA-eV-lAh" id="BaI-hc-B7N"/>
-                        <outlet property="initView" destination="m2S-Jp-Qdl" id="PNi-ME-NqQ"/>
-                        <segue destination="jB2-Ap-xzY" kind="show" id="52T-oe-BKJ"/>
+                        <outlet property="connectionView" destination="m2S-Jp-Qdl" id="PNi-ME-NqQ"/>
+                        <segue destination="jB2-Ap-xzY" kind="custom" identifier="toInitViewController" customClass="Segue" customModule="Flat_Land_Client" customModuleProvider="target" id="a7m-eE-JpY"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-                <objectController id="qGL-y2-Ryk"/>
             </objects>
             <point key="canvasLocation" x="654" y="692"/>
         </scene>
         <!--Master View Controller-->
         <scene sceneID="pXq-XP-FTf">
             <objects>
-                <viewController id="VUu-m7-PZC" customClass="MasterViewController" customModule="Flat_Land_Client" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" wantsLayer="YES" id="0Go-X2-UcC" customClass="InitView" customModule="Flat_Land_Client" customModuleProvider="target">
+                <viewController showSeguePresentationStyle="single" id="VUu-m7-PZC" customClass="MasterViewController" customModule="Flat_Land_Client" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" wantsLayer="YES" id="0Go-X2-UcC" customClass="MasterView" customModule="Flat_Land_Client" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <containerView translatesAutoresizingMaskIntoConstraints="NO" id="6nZ-wf-Q1h">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
-                                <connections>
-                                    <segue destination="XfG-lQ-9wD" kind="embed" id="bzx-c7-kfa"/>
-                                </connections>
                             </containerView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xI3-HO-144">
                                 <rect key="frame" x="18" y="231" width="444" height="19"/>
@@ -805,9 +819,6 @@
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
-                                <connections>
-                                    <binding destination="cLI-Ia-z7A" name="value" keyPath="selection.selection.notification" id="Wjl-MC-lAa"/>
-                                </connections>
                             </textField>
                         </subviews>
                         <constraints>
@@ -822,25 +833,49 @@
                     </view>
                     <connections>
                         <outlet property="initView" destination="0Go-X2-UcC" id="3gq-HP-THq"/>
+                        <outlet property="statusLabel" destination="xI3-HO-144" id="O93-ds-YiD"/>
                     </connections>
                 </viewController>
                 <customObject id="Xu9-OP-ixM" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-                <userDefaultsController representsSharedInstance="YES" id="Q9B-FW-tXz"/>
-                <objectController id="cLI-Ia-z7A">
-                    <connections>
-                        <binding destination="Q9B-FW-tXz" name="contentObject" keyPath="values.self.overlayData" id="TLz-3c-fel"/>
-                    </connections>
-                </objectController>
             </objects>
             <point key="canvasLocation" x="654" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--Init View Controller-->
         <scene sceneID="deo-LI-qIF">
             <objects>
-                <viewController id="jB2-Ap-xzY" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="InitViewController" showSeguePresentationStyle="single" id="jB2-Ap-xzY" customClass="InitViewController" customModule="Flat_Land_Client" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="LGi-ZX-2ho">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HaP-Yh-Dhf">
+                                <rect key="frame" x="156" y="176" width="168" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="cPB-L1-wyI"/>
+                                    <constraint firstAttribute="width" constant="164" id="gb7-8R-bQi"/>
+                                </constraints>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="This is the lengend of Luce" id="Qn0-Im-XH7">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="F9I-hv-IxU">
+                                <rect key="frame" x="158" y="124" width="164" height="22"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="8EB-F8-c3z">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="HaP-Yh-Dhf" firstAttribute="centerX" secondItem="LGi-ZX-2ho" secondAttribute="centerX" id="9Nu-ia-Mge"/>
+                            <constraint firstItem="F9I-hv-IxU" firstAttribute="width" secondItem="HaP-Yh-Dhf" secondAttribute="width" id="H7O-MA-3xQ"/>
+                            <constraint firstItem="F9I-hv-IxU" firstAttribute="top" secondItem="HaP-Yh-Dhf" secondAttribute="bottom" constant="30" id="MLV-1b-ogS"/>
+                            <constraint firstItem="F9I-hv-IxU" firstAttribute="centerY" secondItem="LGi-ZX-2ho" secondAttribute="centerY" id="g1c-7w-ePX"/>
+                            <constraint firstItem="F9I-hv-IxU" firstAttribute="centerX" secondItem="LGi-ZX-2ho" secondAttribute="centerX" id="oko-v3-PK7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="lf7-3U-MeS" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
